--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
   </head>
   <body class="bg-base-200 text-base-content transition-colors duration-200">
     <div id="root"></div>
+    <div id="overlay-root"></div>
   </body>
 </html>
